[package]
name = "popsicle_libcosmic"
description = "USB Flasher"
authors = ["maybe me no clue"]
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "popsicle_libcosmic"
path = "src/main.rs"


[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
tokio = "0.1.0"
url = "2.5.4"
iso9660 = "0.1.1"
bytesize = "2.0.1"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["debug", "winit", "tokio", "xdg-portal"]
